# multilinguarr

./: .dockerignore  .env.example  .gitignore  .releaserc.cjs  Cargo.toml  Dockerfile  changelog.md  clippy.toml  contributing.md  deny.toml  package-lock.json  package.json  readme.md  renovate.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml
docs/: .gitignore  favicon-settings.json  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/components/: ApiReference.vue
docs/.vitepress/theme/: custom.css  index.ts
docs/api/: index.md
docs/guide/: configuration.md  directory-structure.md  how-it-works.md  installation.md  introduction.md  links.md  migration.md
docs/public/: robots.txt
docs/scripts/: brand-paths.ts  generate-brand.ts
migrations/: 001_jobs_table.sql  002_config_tables.sql
scripts/: backfill-409-race-incidents.sql  generate-fixtures.sh
src/: lib.rs  main.rs
src/api/: auth.rs  config.rs  error.rs  instances.rs  jobs.rs  languages.rs  mod.rs  openapi.rs  regenerate.rs  schema.rs  setup.rs  state.rs  tests.rs
src/app/: mod.rs  tests.rs
src/client/: common.rs  error.rs  http.rs  mod.rs  radarr.rs  sonarr.rs  tests.rs
src/config/: bootstrap.rs  error.rs  mod.rs  repo.rs  types.rs
src/db/: error.rs  mod.rs  tests.rs
src/detection/: error.rs  ffprobe.rs  mod.rs  tests.rs
src/handler/: cross_instance.rs  delete.rs  error.rs  import.rs  mod.rs  registry.rs  tests.rs
src/jellyfin/: client.rs  error.rs  mod.rs  service.rs  tests.rs
src/link/: error.rs  mod.rs  tests.rs
src/observability/: mod.rs  tests.rs
src/queue/: error.rs  job.rs  mod.rs  store.rs  tests.rs  worker.rs
src/reconcile/: mod.rs
src/webhook/: error.rs  events.rs  mod.rs  server.rs  tests.rs
tests/: e2e.rs
tests/e2e/: admin.rs  movies.rs  series.rs
tests/e2e/common/: arr.rs  assertions.rs  containers.rs  fixtures.rs  harness.rs  mod.rs  sandbox.rs  server.rs
