[package]
name = "multilinguarr"
version = "1.1.0"
edition = "2021"
rust-version = "1.88"
description = "Enforces multi-language audio in the *arr media stack via symlinks/hardlinks and Jellyfin library routing"
license = "MIT"
repository = "https://github.com/dlepaux/multilinguarr"
readme = "readme.md"
publish = false

[[bin]]
name = "multilinguarr"
path = "src/main.rs"

[lib]
name = "multilinguarr"
path = "src/lib.rs"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["e2e"]

[features]
# `e2e` gates the integration test binary. CI runs
# `cargo test` without it (no Docker daemon needed); developers
# opt in with `cargo test --features e2e`.
e2e = []

[dependencies]
axum = { version = "0.8", features = ["json"] }

chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "json", "chrono"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"

[dev-dependencies]
assert_fs = "1"
tempfile = "3"
testcontainers = "0.27"
tower = "0.5"
tracing-test = "0.2"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
